lib_LTLIBRARIES = libgs.la

AM_CPPFLAGS=-I${top_srcdir}/include

libgs_la_SOURCES = \
	AbstractDbObjectSource.cxx \
	AbstractPortal.cxx \
	DbObjectCache.cxx \
	SourceDiskLink.cxx \
	SourceSvnLink.cxx \
	DbObjectManager.cxx \
	DbObjectManifest.cxx \
	CommunicationsManager.cxx \
	IntraAppPortal.cxx \
	Session.cxx \
	AccessManager.cxx \
	GeometryService.cxx \
	NetPortal.cxx \
	SessionManager.cxx \
	NetMsgActionDefinitions/AbstractNetMsgActionDef.cxx \
	NetMsgActionDefinitions/NetMsgActionDefManager.cxx \
	NetMsgActionDefinitions/NewSessionNMAD.cxx \
	Jobs/AbstractJob.cxx \
	Jobs/CopyCacheToSvnJob.cxx \
	Jobs/JobScheduler.cxx \
	Jobs/NewSessionJob.cxx \
	Jobs/CopyCacheToDiskJob.cxx \
	Jobs/JobManager.cxx \
	Jobs/JobWorker.cxx \
	Jobs/NetMsgActionJob.cxx \
	netMsg/GeometryManifestMsg.cxx \
	netMsg/GeometryChunkMsg.cxx \
	netMsg/GeometryReqMsg.cxx \
	netMsg/NetMsg.cxx \
	netMsg/RemHostNameSetFailMsg.cxx \
	netMsg/RemHostNameSetMsg.cxx
