lib_LTLIBRARIES = libgs.la

AM_CPPFLAGS=-I${top_srcdir}/include

libgs_la_SOURCES = \
	AbstractDbObjectSource.cxx \
	AbstractPortal.cxx \
	DbObjectCache.cxx \
	SourceDiskLink.cxx \
	SourceSvnLink.cxx \
	DbObjectManager.cxx \
	DbObjectManifest.cxx \
	CommunicationsManager.cxx \
	IntraAppPortal.cxx \
	Session.cxx \
	AccessManager.cxx \
	GeometryService.cxx \
	NetPortal.cxx \
	SessionManager.cxx \
	NetMsgActionDefinitions/AbstractNetMsgActionDef.cxx \
	NetMsgActionDefinitions/NetMsgActionDefManager.cxx \
	NetMsgActionDefinitions/NewSessionNMAD.cxx \
	Jobs/AbstractJob.cxx \
	Jobs/CopyCacheToSvnJob.cxx \
	Jobs/JobScheduler.cxx \
	Jobs/NewSessionJob.cxx \
	Jobs/CopyCacheToDiskJob.cxx \
	Jobs/JobManager.cxx \
	Jobs/JobWorker.cxx \
	Jobs/NetMsgActionJob.cxx \
	libNetwork/GeometryManifestMsg.cxx \
	libNetwork/GeometryChunkMsg.cxx \
	libNetwork/GeometryReqMsg.cxx \
	libNetwork/NetMsg.cxx \
	libNetwork/RemHostNameSetFailMsg.cxx \
	libNetwork/RemHostNameSetMsg.cxx
