
lib_LTLIBRARIES = libge.la

libge_la_SOURCES = \
	AbstractDbObjectSource.cxx \
	BrlcadDb.cxx \
	CommandResult.cxx \
	DbObject.cxx \
	GED.cxx \
	GeometryEngine.cxx \
	GeoCollection.cxx \
	GeoRegion.cxx \
	GeoSolid.cxx \
	NonGeo.cxx \
	DbObjectCache.cxx \
	SourceDiskLink.cxx \
	SourceSvnLink.cxx \
	DbObjectManager.cxx \
	DbObjectManifest.cxx
